--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 	Icons
 -->
 	<section class="grid-container">
-		<h2>Icons</h2>
+	<h2>Icons</h2>
 		<div class="icon-1">
-			<img src="img/icon-sample.svg">
+			<img src="img/iconmonstr-coffee-15-icon.svg">
 		</div>
 		<div class="icon-2">
-			<img src="img/icon-sample.svg">
+			<img src="img/iconmonstr-quote-6-icon.svg">
 		</div>
 		<div class="icon-3">
-			<img src="img/icon-sample.svg">
+			<img src="img/iconmonstr-paintbrush-icon.svg">
 		</div>
 		<div class="icon-4">
-			<img src="img/icon-sample.svg">
+			<img src="img/iconmonstr-smiley-lol-icon.svg">
 		</div>
 		<div class="icon-5">
-			<img src="img/icon-sample.svg">
+			<img src="img/iconmonstr-glasses-12-icon.svg">
 		</div>
 	</section>	
 
