--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
 			<h2>Typography A</h2>
 
 			<h2>Primary Header</h2>
-			<p>Font name, variant, color, etc</h2>
+			<p>Lora, regular and bold, black</h2>
 			
 
 			<h3>Secondary Header</h3>
-			<p>Font name, variant, color, etc</h2>
+			<p>Lobster, variant, black</h2>
 			
 			<h3>Paragraphs</h3>
-			<p>Font name, variant, colo, etc</h2>
+			<p>Lora, regular and bold, black</h2>
 				
 			<p>Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
