--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Style Tile w/ User Interface</title>
 	
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">	
+  <link rel="stylesheet" href="css/grid.css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/tile-template.css"> 			
   <link rel="stylesheet" href="css/styles.css">	
 	
@@ -15,8 +16,8 @@
 
 <!-- Project Info -->
 	<section class="grid-container">
-		<h1>Project</h1>
-		<p>Version 0</p>
+		<h1>Style Tile</h1>
+		<p>Version 1</p>
 	</section>
 
 <!-- 
@@ -51,7 +52,7 @@
 	<section class="grid-container">
 		<h2>Imagery</h2>
 		<div class="imagery-1">
-		<img src="http://a1.dspncdn.com/media/692x/ce/27/e2/ce27e2bb2b4dca276b59f75b466abd41.jpg">
+			<img src="http://a1.dspncdn.com/media/692x/ce/27/e2/ce27e2bb2b4dca276b59f75b466abd41.jpg">
 		</div>
 		<div class="imagery-2">
             <img src="http://a1.dspncdn.com/media/692x/8c/49/44/8c4944456d3271f27f75ffc746ff877d.jpg">
@@ -71,7 +72,7 @@
 	Icons
 -->
 	<section class="grid-container">
-	<h2>Icons</h2>
+		<h2>Icons</h2>
 		<div class="icon-1">
 			<img src="img/iconmonstr-coffee-15-icon.svg">
 		</div>
@@ -93,7 +94,7 @@
 <section class="grid-container">
 	
 <!-- Primary Navigation -->	
-	<section class="grid-6">
+	<section class="grid-6" id="pnav">
 		<h2>Primary Navigation</h2>
 		<nav role='navigation'>
 		  <ul>
@@ -105,12 +106,12 @@
 		</nav>
 		
 		<p><a href="#">Text Link</a></p>
-		<p><button>Link Button</button></p>
+		<p><button class="link-button">Link Button</button></p>
 
 	</section>
 
 <!-- Secondary Navigation -->	
-	<section class="grid-6">
+	<section class="grid-6" id="snav">
 		<h2>Secondary Navigation</h2>
 		<nav role='navigation'>
 		  <ul>
@@ -140,14 +141,14 @@
 			<h2>Typography A</h2>
 
 			<h2>Primary Header</h2>
-			<p>Lora, regular and bold, black</h2>
+			<p>Font name, variant, color, etc</h2>
 			
 
 			<h3>Secondary Header</h3>
-			<p>Lobster, variant, black</h2>
+			<p>Font name, variant, color, etc</h2>
 			
 			<h3>Paragraphs</h3>
-			<p>Lora, regular and bold, black</h2>
+			<p>Font name, variant, colo, etc</h2>
 				
 			<p>Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
