--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		</nav>
 		
 		<p><a href="#">Text Link</a></p>
-		<p><button>Link Button</button></p>
+		<p><button class="link-button">Link Button</button></p>
 
 	</section>
 
