--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cinzel:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/tile-template.css"> 			
   <link rel="stylesheet" href="css/styles.css">	
 	
@@ -141,14 +143,14 @@
 			<h2>Typography A</h2>
 
 			<h2>Primary Header</h2>
-			<p>Font name, variant, color, etc</h2>
+			<p>Lora, regular and bold, black</h2>
 			
 
 			<h3>Secondary Header</h3>
-			<p>Font name, variant, color, etc</h2>
+			<p>Cinzel, regular and bold, black</h2>
 			
 			<h3>Paragraphs</h3>
-			<p>Font name, variant, colo, etc</h2>
+			<p>Lora, regular and bold, black </h2>
 				
 			<p>Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -162,14 +164,14 @@
 			<h2>Typography B</h2>
 
 			<h2>Primary Header</h2>
-			<p>Font name, variant, color, etc</h2>
+			<p>Cinzel, regular and bold, black</h2>
 			
 
 			<h3>Secondary Header</h3>
-			<p>Font name, variant, color, etc</h2>
+			<p>Lora, regular and bold, black</h2>
 			
 			<h3>Paragraphs</h3>
-			<p>Font name, variant, colo, etc</h2>
+			<p>Libre Baskerville, regular and bold, black </h2>
 				
 			<p>Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
