--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
 			<h2>Typography A</h2>
 
 			<h2>Primary Header</h2>
-			<p>Lora, regular and bold, black</h2>
+			<p>Lora, regular and bold, black</p>
 			
 
 			<h3>Secondary Header</h3>
-			<p>Cinzel, regular and bold, black</h2>
+			<p>Cinzel, regular and bold, black</p>
 			
 			<h3>Paragraphs</h3>
-			<p>Lora, regular and bold, black </h2>
+			<p>Lora, regular and bold, black </p>
 				
 			<p>Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut <a href="#">labore et</a>dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
